--- a/Checklist/templates/Checklist/changePassword.html
+++ b/Checklist/templates/Checklist/changePassword.html
@@ -1,53 +1,68 @@
+
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
     <meta charset="utf-8">
-    <title></title>
+    <title>Login</title>
+    <style media="screen">
+      .spec{
+        margin-bottom:20px;
+      }
+			*{
+			font-family: 'Poppins', sans-serif;
+			}
+				nav{
+					background-color:#866ec7!important;
+				}
+				h1{
+					color:#866ec7;
+				}
+				input{
+					border:2px solid #866ec7!important;
+					padding: 10px;
+				}
+				input::placeholder{
+					color:#866ec7!important;
+				}
+				button{
+					padding: 10px;
+					background-color: #866ec7!important;
+					color: white!important;
+				}
+    </style>
   </head>
   <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <div class="conatiner" style="width:30%;margin:0 auto;margin-top: 150px;">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'studentHome' %}">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'viewEssay' %}">Essays</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'viewTesting' %}">Standardised Testing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'viewActivity' %}">Activities</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'viewTranscripts' %}">School Transcripts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'viewLOR' %}">LORs</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'invitations' %}">LORs</a>
-      </li>
-    </ul>
-  </div>
-  </nav>
-{% if error %}
-<h1>{{error}}</h1>
+<h1 class="text-center spec">Common Checklist</h1>
 <br>
+{% if error %}
+{{error}}
 {% endif %}
-<form class="" action="{% url 'changePassword' %}" method="post">
-  {% csrf_token %}
-  Current Password:
-  <input type="password" name="current" value=""> <br>
-  New Password:
-  <input type="password" name="new" value=""> <br>
-  New Password Again:
-  <input type="password" name="newVerify" value=""> <br>
-  <input type=submit name="" value="Submit!">
-</form>
+  <form method="post" action="{% url 'changePassword'%}">
+    {% csrf_token %}
+  <div class="form-group">
+    <!-- <label for="exampleInputEmail1">Email address</label> -->
+    <input placeholder="Current password"type="password" class="form-control" id="exampleInputEmail1" name="current" aria-describedby="emailHelp">
+    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+  </div>
+  <div class="form-group">
+    <!-- <label for="exampleInputEmail1">Email address</label> -->
+    <input placeholder="New Password"type="password" class="form-control" id="exampleInputEmail1" name="new" aria-describedby="emailHelp">
+    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+  </div>
+  <div class="form-group">
+    <!-- <label for="exampleInputEmail1">Email address</label> -->
+    <input placeholder="Verify password"type="password" class="form-control" id="exampleInputEmail1" name="newVerify" aria-describedby="emailHelp">
+    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+  </div>
+  <br>
+  <button type="submit" class="btn">Submit</button>
+  </form>
+  </div>
+
   </body>
 </html>
