--- a/Checklist/templates/Checklist/counHome.html
+++ b/Checklist/templates/Checklist/counHome.html
@@ -51,6 +51,9 @@
 							<a href="{% url 'AddStudents' %}"> Add students </a>
 						</li>
             <li>
+              <a href="{% url 'changePassword' %}"> Change Password </a>
+            </li>
+            <li>
               <a href="{% url 'logout' %}"> Logout </a>
             </li>
 	        </ul>
