--- a/Checklist/templates/Checklist/studHome.html
+++ b/Checklist/templates/Checklist/studHome.html
@@ -101,6 +101,9 @@
 							<a href="{% url 'invitations' %}"> View invites </a>
 						</li>
             <li>
+              <a href="{% url 'changePassword' %}"> Change Password </a>
+            </li>
+            <li>
               <a href="{% url 'logout' %}"> Logout </a>
             </li>
 	        </ul>
