--- a/Checklist/templates/Checklist/homepage.html
+++ b/Checklist/templates/Checklist/homepage.html
@@ -25,7 +25,7 @@
   </div>
 </nav>
     <div class="jumbotron">
-      <h1>Common Checklist</h1>
+      <h1>College Collab</h1>
 
     </div>
   </body>
