--- a/Checklist/templates/Checklist/login.html
+++ b/Checklist/templates/Checklist/login.html
@@ -55,7 +55,7 @@
   </nav>
   <div class="conatiner" style="width:30%;margin:0 auto;margin-top: 150px;">
 
-<h1 class="text-center spec">Common Checklist</h1>
+<h1 class="text-center spec">College Collab</h1>
 <br>
 {% if error %}
 {{error}}
