--- a/Checklist/templates/Checklist/addLetter.html
+++ b/Checklist/templates/Checklist/addLetter.html
@@ -129,7 +129,7 @@
 			</div>
 		</div>
 		<footer class="site-footer">
-			Common Checklist by Kepler Developers
+			College Collab by Kepler Developers
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
