--- a/Checklist/templates/Checklist/addScores.html
+++ b/Checklist/templates/Checklist/addScores.html
@@ -83,7 +83,7 @@
 			<a href="https://1600.io/"> 1600.io </a> <br>
 			<a href="https://reddit.com/r/sat"> Reddit (SAT) </a> <br>
 			<a href="https://reddit.com/r/act"> Reddit (ACT) </a> <br>
-			<h4> Happy Prepping , <br> Team Common Checklist </h4>
+			<h4> Happy Prepping , <br> Team College Collab </h4>
       <form class="" action="{% url 'addTesting' %}" method="post" enctype="multipart/form-data">
 {%csrf_token%}
 
@@ -105,7 +105,7 @@
       </form>
 		</div>
 		<footer class="site-footer">
-			Common Checklist by Kepler Developers
+			College Collab by Kepler Developers
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
