--- a/Checklist/templates/Checklist/addStudents.html
+++ b/Checklist/templates/Checklist/addStudents.html
@@ -94,7 +94,7 @@
 		</div>
 		<!-- Site footer -->
     <footer class="site-footer">
-			Common Checklist by Kepler Developers
+			College Collab by Kepler Developers
     </footer>
 
 
