--- a/Checklist/templates/Checklist/counHome.html
+++ b/Checklist/templates/Checklist/counHome.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Common Checklist</title>
+  	<title>College Collab</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -42,7 +42,7 @@
 	        </button>
         </div>
 				<div class="p-4 pt-5">
-		  		<h1><a href="index.html" class="logo">Common Checklist</a></h1>
+		  		<h1><a href="index.html" class="logo">College Collab</a></h1>
 	        <ul class="list-unstyled components mb-5">
 						<li>
 							<a href="{% url 'AccountCounselor' %}"> View your students </a>
