--- a/Checklist/templates/Checklist/studHome.html
+++ b/Checklist/templates/Checklist/studHome.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Common Checklist</title>
+  	<title>College Collab</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -37,7 +37,7 @@
 	        </button>
         </div>
 				<div class="p-4 pt-5">
-		  		<h1><a href="index.html" class="logo">Common Checklist</a></h1>
+		  		<h1><a href="index.html" class="logo">College Collab</a></h1>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
 	            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Essays</a>
@@ -123,7 +123,7 @@
         {% if profile.counselor.name %}
         <h3 class="mb-4 "> Counselor -  {{ profile.counselor.name }} </h3>
         {% endif%}
-				<p>Appyling to college is stressful. We know that. And we're here to help. With Common Checklist, our users can streamline their college application process. Serving as an intermediary to the Common Application portal, with Common Checklist, students can collect all the relevant documents they need for their application and get them approved by their counsellors.</p>
+				<p>Appyling to college is stressful. We know that. And we're here to help. With College Collab, our users can streamline their college application process. Serving as an intermediary to the Common Application portal, with College Collab, students can collect all the relevant documents they need for their application and get them approved by their counsellors.</p>
 				<h4> Important deadlines </h4>
 				<h5 class="timer-title"> SAT 2020 Testing dates (subject to change) </h5>
 				August 29, 2020   <p id="t4"></p>
