--- a/Checklist/templates/Checklist/viewTranscripts.html
+++ b/Checklist/templates/Checklist/viewTranscripts.html
@@ -118,7 +118,7 @@
 
 		</div>
 		<footer class="site-footer">
-			Common Checklist by Kepler Developers
+			College Collab by Kepler Developers
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
