--- a/Checklist/templates/Checklist/students.html
+++ b/Checklist/templates/Checklist/students.html
@@ -75,6 +75,7 @@
 						<th> Student name</th>
 						<th> Email </th>
 						<th> Profile</th>
+            <th> Notes</th>
 						<th> Contact </th>
 					</tr>
           {% for student in students %}
@@ -82,6 +83,7 @@
 						<td> {{ student.name }} </td>
 						<td> {{ student.email }} </td>
 						<td> <a href="{% url 'profile' student.user.username %}"> Click here </a> </td>
+            <td> <a href="{% url 'addNotes' student.user.username %}"> Click here </a> </td>
 						<td> <a href="mailto:{{ student.email }}"> Click here to send a mail</a> </td>
 					</tr>
           {% endfor %}
