--- a/Checklist/templates/Checklist/counHome.html
+++ b/Checklist/templates/Checklist/counHome.html
@@ -69,6 +69,8 @@
       <div id="content" class="p-4 p-md-5 pt-5">
 				<h1> Counsellor Dashboard </h1>
 				<h4> Important deadlines </h4>
+        <a href="{% url 'addlink' %}"> <button type="button" class="btn btn-success" name="button"> Post a link!</button> </a>
+        <br><br>
 				<h5 class="timer-title"> SAT 2020 Testing dates (subject to change) </h5>
 				August 29, 2020   <p id="t4"></p>
 				October 3, 2020	<p id="t5"></p>
