--- a/Checklist/templates/Checklist/addNotes.html
+++ b/Checklist/templates/Checklist/addNotes.html
@@ -1,14 +1,88 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+{% load static %}
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'super.css' %}">
+		<link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>View activities</title>
   </head>
+	<style media="screen">
+		.act-form{
+			width:auto;
+			height:auto;
+			padding:30px;
+		}
+		input{
+			padding:10px;
+			width:90%;
+			margin-top:10px;
+			margin-bottom: 10px;
+
+		}
+		button{
+			margin-top:20px;
+			border:none;
+			background:none;
+			padding:10px;
+			color:#866ec7;
+			font-size: 20px;
+		}
+		.text-inp{
+				border:1px solid #866ec7;
+				border-radius:5px;
+		}
+		.text-inp::placeholder{
+			color:#866ec7;
+		}
+		.prompt{
+			color:gray;
+			margin-bottom: 10px;
+			font-style:italic;
+			margin-top:10px;
+		}
+		select{
+			margin-top:10px;
+			margin-bottom:10px;
+			width:100%;
+			border:1px solid #866ec7;
+			color: #866ec7;
+			background:white;
+			-webkit-appearance: none;
+    	-moz-appearance: none;
+    	appearance: none;
+    	padding: 10px;
+		}
+	</style>
   <body>
-    <form class="" action="{% url 'addNotes' username %}" method="post">
-{% csrf_token %}
-<input type="text" name="note" value="">
-<button type="submit" name="button">send note</button>
-    </form>
+    <div class="main-content">
+			<h3> Send a note to a student </h3>
+      <form class="" action="{% url 'addNotes' %}" method="post">
+        {% csrf_token %}
+
+			<div class="act-form">
+				<p class="prompt"> Enter student username </p>
+				<input name='username' type="text" class="text-inp" placeholder="Enter here">
+				<p class="prompt"> Enter your note </p>
+				<input name='note' type="text" class="text-inp" placeholder="Enter here">
+				<br>
+				<button type="submit" name="button">Submit</button>
+			</div>
+      </form>
+      {{ error }}
+		</div>
+		<footer class="site-footer">
+			College Collab by Kepler Developers
+    </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
