--- a/Checklist/templates/Checklist/viewNotes.html
+++ b/Checklist/templates/Checklist/viewNotes.html
@@ -1,14 +1,90 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+{% load static %}
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'super.css' %}">
+		<link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>View activities</title>
   </head>
+	<style media="screen">
+
+		table{
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top:20px;
+		}
+		table, th, td {
+			padding:10px;
+		}
+		a{
+			color:#866ec7!important;
+		}
+		th{
+			background-color:#866ec7!important;
+			color:white;
+		}
+		h4{
+			margin-top: 20px;
+			font-size: 15px;
+			color:gray;
+		}
+		a{
+			margin-top: 20px!important;
+			font-style: italic;
+		}
+		.note{
+			background-color: #866ec7;
+			color:white!important;
+			padding: 20px;
+			margin-top: 20px;
+		}
+		.note-title{
+			color:white;
+			font-size: 30px!important;
+		}
+		.note-hr{
+			margin-top:20px;
+			background-color:white;
+
+		}
+    .main-content{
+      margin-bottom: 100px;
+    }
+	</style>
   <body>
-    <ul>
-    {% for note in notes %}
-    <li>from {{note.counselor_name}} - {{ note.text }}</li>
-    {% endfor %}
-    </ul>
+    <div class="main-content">
+      <a href="{% url 'studentHome' %}"><i style="margin-bottom: 20px;float: right;"class="fa fa-home fa-2x"></i></a>
+
+			<h3> View notes </h3>
+      {% for note in notes %}
+			<section class="note">
+				<h4 class="note-title"> {{note.counselor_name}}</h4>
+				<hr class="note-hr">
+				<h6 class="note-date"> 27-11-2002 </h6>
+				<p class="note-body"> {{ note.text }} </p>
+			</section>
+      {% endfor %}
+		</div>
+		<!-- Site footer -->
+    <footer class="site-footer">
+			College Collab by Kepler Developers
+    </footer>
+
+		<script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
