--- a/Checklist/templates/Checklist/counHome.html
+++ b/Checklist/templates/Checklist/counHome.html
@@ -54,6 +54,9 @@
               <a href="{% url 'changePassword' %}"> Change Password </a>
             </li>
             <li>
+              <a href="{% url 'addNotes' %}"> Send Notes </a>
+            </li>
+            <li>
               <a href="{% url 'logout' %}"> Logout </a>
             </li>
 	        </ul>
