--- a/Checklist/templates/Checklist/signup.html
+++ b/Checklist/templates/Checklist/signup.html
@@ -48,7 +48,7 @@
     <form class="container form-group needed" action="{% url 'Signup' %}" method="post"><br>
       {% csrf_token %}
       <input class="form-control"  type="text" name="username" value="" placeholder="Username" required><br>
-      <input class="form-control"  type="text" name="name" value="" placeholder="Full Name Name" required><br>
+      <input class="form-control"  type="text" name="name" value="" placeholder="Full Name" required><br>
       <input class="form-control"  type="email" name="email" value="" placeholder="Email" required><br>
       <input class="form-control"  type="password" name="password" value="" placeholder="Password" required><br>
       <input class="form-control"  type="password" name="verifyPassword" value="" placeholder="Confirm Password" required><br>
