--- a/Checklist/templates/Checklist/addActivity.html
+++ b/Checklist/templates/Checklist/addActivity.html
@@ -114,9 +114,9 @@
 					<option value="Other Club/Activity">Other Club/Activity</option>
 				</select>
 
-				<p class="prompt"> Position you held and organisation name (50 words or less) </p>
+				<p class="prompt"> Position you held and organisation name (50 characters or less) </p>
 				<input  name="position" type="text" class="text-inp" placeholder="Enter here">
-				<p class="prompt"> Describe your activity (150 words or less) </p>
+				<p class="prompt"> Describe your activity (150 characters or less) </p>
 				<input  name="description" type="text" class="text-inp" placeholder="Enter here">
 				<p class="prompt"> Enter estimated hours/week</p>
 				<input  name="hoursperweek"type="number" class="text-inp" placeholder="Enter here">
