--- a/Checklist/templates/Checklist/studHome.html
+++ b/Checklist/templates/Checklist/studHome.html
@@ -64,7 +64,7 @@
                     <a href="{% url 'addActivity' %}">Add activities to your profile</a>
                 </li>
                 <li>
-                    <a href="{% url 'viewActivity' %}">View your activities</a>
+                    <a href="{% url 'viewActivity' profile.user %}">View your activities</a>
                 </li>
               </ul>
 	          </li>
