--- a/Checklist/templates/Checklist/viewLetter.html
+++ b/Checklist/templates/Checklist/viewLetter.html
@@ -51,6 +51,7 @@
 						<th> Email </th>
 						<th> Post </th>
             <th> Letter </th>
+            <th>Delete</th>
 					</tr>
           {% for i in lor %}
 					<tr>
@@ -58,6 +59,7 @@
 						<td> {{ i.post }} </td>
 						<td> {{ i.email }} </td>
             <td><a href="{{ i.lor.url }}">File </a> <td>
+              <td> <a href="{% url 'delete' names.letter i.id %}"> <button type="button" class="btn btn-danger" name="button">Delete!</button> </a> </td>
 					</tr>
           {% endfor %}
 			  </table>
