--- a/Checklist/templates/Checklist/homepage.html
+++ b/Checklist/templates/Checklist/homepage.html
@@ -48,7 +48,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'Login' %}">Login</a>
+            <a class="nav-link" href="{% url 'Loginuser' %}">Login</a>
           </li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
         <h1 class="masthead-heading mb-0">Take on the application process.</h1>
         <h2 class="masthead-subheading mb-0">Help us help you.</h2>
         <br>
-        <a href="{% url 'Signup' %}" class="spec"> <button type="button" class="btn btn-primary pur" name="button">SignUp!</button> </a>
+        <a href="{% url 'Signupuser' %}" class="spec"> <button type="button" class="btn btn-primary pur" name="button">SignUp!</button> </a>
       </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
