--- a/Checklist/templates/Checklist/studHome.html
+++ b/Checklist/templates/Checklist/studHome.html
@@ -119,7 +119,7 @@
               <a href="{% url 'changePassword' %}"> Change Password </a>
             </li>
             <li>
-              <a href="{% url 'logout' %}"> Logout </a>
+              <a href="{% url 'logoutuser' %}"> Logout </a>
             </li>
 	        </ul>
 
