--- a/Checklist/templates/Checklist/counHome.html
+++ b/Checklist/templates/Checklist/counHome.html
@@ -57,14 +57,10 @@
               <a href="{% url 'addNotes' %}"> Send Notes </a>
             </li>
             <li>
-              <a href="{% url 'logout' %}"> Logout </a>
+              <a href="{% url 'logoutuser' %}"> Logout </a>
             </li>
 
 	        </ul>
-
-
-
-
 
 	      </div>
     	</nav>
