--- a/Checklist/templates/Checklist/tryStudHome.html
+++ b/Checklist/templates/Checklist/tryStudHome.html
@@ -99,7 +99,7 @@
             </a>
           </li>
           <li>
-            <a href="./collegelist.html">
+            <a href="{% url 'myList'  %}">
               <i class="now-ui-icons education_glasses"></i>
               <p>COLLEGE LIST</p>
             </a>
