--- a/Checklist/templates/Checklist/collegelist.html
+++ b/Checklist/templates/Checklist/collegelist.html
@@ -14,20 +14,13 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 -->
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'super.css' %}">
-  <link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>View activities</title>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
@@ -44,9 +37,39 @@
   <link href="{% static 'css/now-ui-dashboard.css'%}" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="{% static 'css/demo.css'%}" rel="stylesheet" />
+  <style media="screen">
+    .act-form{
+      width:auto;
+      height:auto;
+      margin-top:0px;
+    }
+    input{
+      padding:10px;
+      width:100%;
+      margin-bottom:10px;
+    }
+    .text-inp{
+        border:1px solid #62479e;
+        border-radius:5px;
+    }
+    .text-inp::placeholder{
+      color:#62479e;
+    }
+    select{
+      margin-bottom:10px;
+      width:100%;
+      border:1px solid #62479e;
+      color: #62479e;
+      background:white;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      padding: 10px;
+    }
+  </style>
 </head>
 
-<body class="user-profile">
+<body class="">
   <div class="wrapper ">
     <div class="sidebar" data-color="purple">
       <!--
@@ -59,7 +82,7 @@
     </div>
     <div class="sidebar-wrapper" id="sidebar-wrapper">
       <ul class="nav">
-        <li >
+        <li">
           <a href="{% url 'trialHome' %}">
             <i class="now-ui-icons design_app"></i>
             <p>Dashboard</p>
@@ -95,13 +118,13 @@
             <p>TRANSCRIPTS</p>
           </a>
         </li>
-        <li>
-          <a href="./collegelist.html">
+        <li class="active">
+          <a href="{% url 'myList' %}">
             <i class="now-ui-icons education_glasses"></i>
             <p>COLLEGE LIST</p>
           </a>
         </li>
-        <li class="active">
+        <li>
           <a href="{% url 'profile' request.user %}">
             <i class="now-ui-icons users_single-02"></i>
             <p>VIEW YOUR PROFILE</p>
@@ -128,7 +151,7 @@
                 <span class="navbar-toggler-bar bar3"></span>
               </button>
             </div>
-            <a class="navbar-brand" href="#pablo">User Profile</a>
+            <a class="navbar-brand" href="#pablo">Student College List</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -154,43 +177,28 @@
       </div>
       <div class="content">
         <div class="row">
-          <div class="col-md-4">
-            <div class="card card-user">
-              <div class="card-body">
-                <div class="author">
-                    <img class="avatar border-gray" src="{% static 'images/person.png'%}" alt="...">
-                    <h5 class="title">{{ user.studentprofile.name }}</h5>
-                  <p class="description">
-                    {{ user.username }}
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-8">
+          <div class="col-md-12">
             <div class="card">
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table">
-                    <thead class=" text-primary">
-                      <th>
-                        Counselor(s)
-                      </th>
-                      <th>
-                        Email
-                      </th>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>
-                          {{ user.studentprofile.counselor.name }}
-                        </td>
-                        <td>
-                          {{ user.studentprofile.counselor.email }}
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <div class="card-header">
+                <h4 class="card-title" style="padding-left: 15px;">Add College</h4>
+              </div>
+              <div class="card-body"style="padding-left: 30px; padding-right: 30px;">
+                <div class="act-form">
+                  <form class="" action="{% url 'myList' %}" method="post">
+                    {% csrf_token %}
+                  <p class="prompt">Enter the College Name</p>
+                  <input name="college" type="text" class="text-inp" placeholder="Enter here">
+                  <p class="prompt"><br>Enter the College's Application Deadline</p>
+                  <input name="date" type="date" class="text-inp" placeholder="Enter here">
+                  <p class="prompt"> <br>Choose Whether This College is a Safety, Target, or Reach School </p>
+                  <select name="status" id="activite">
+                    <option value="safety">Safety</option>
+                    <option value="target">Target</option>
+                    <option value="reach">Reach</option>
+                  </select>
+                  <br><br>
+                  <button type="submit" name="button" class="btn" style="background-color: #62479e;">SUBMIT</button>
+                  </form>
                 </div>
               </div>
             </div>
@@ -198,81 +206,40 @@
           <div class="col-md-12">
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Edit Profile</h5>
+                <h4 class="card-title">Your College List</h4>
               </div>
               <div class="card-body">
-                <form>
-                  <div class="row">
-                    <div class="col-md-5 pr-1">
-                      <div class="form-group">
-                        <label>School</label>
-                        <input type="text" class="form-control" placeholder="School">
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-1">
-                      <div class="form-group">
-                        <label>Username</label>
-                        <input type="text" class="form-control" placeholder="Username">
-                      </div>
-                    </div>
-                    <div class="col-md-4 pl-1">
-                      <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" placeholder="Email">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-6 pr-1">
-                      <div class="form-group">
-                        <label>First Name</label>
-                        <input type="text" class="form-control" placeholder="First Name" value="FirstName">
-                      </div>
-                    </div>
-                    <div class="col-md-6 pl-1">
-                      <div class="form-group">
-                        <label>Last Name</label>
-                        <input type="text" class="form-control" placeholder="Last Name" value="LastName">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="form-group">
-                        <label>Address</label>
-                        <input type="text" class="form-control" placeholder="Home Address">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-4 pr-1">
-                      <div class="form-group">
-                        <label>City</label>
-                        <input type="text" class="form-control" placeholder="City">
-                      </div>
-                    </div>
-                    <div class="col-md-4 px-1">
-                      <div class="form-group">
-                        <label>Country</label>
-                        <input type="text" class="form-control" placeholder="Country">
-                      </div>
-                    </div>
-                    <div class="col-md-4 pl-1">
-                      <div class="form-group">
-                        <label>Postal Code</label>
-                        <input type="text" class="form-control" placeholder="ZIP Code">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="form-group">
-                        <label>About Me</label>
-                        <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description"></textarea>
-                      </div>
-                    </div>
-                  </div>
-                </form>
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead class=" text-primary">
+                      <th>
+                        College
+                      </th>
+                      <th>
+                        Deadline
+                      </th>
+                      <th>
+                        S/T/R
+                      </th>
+                    </thead>
+                    <tbody>
+                      {% for i in user.college.all %}
+                      <tr>
+                        <td>
+                          {{ i.name }}
+                        </td>
+                        <td>
+                          {{ i.date }}
+                        </td>
+                        <td>
+                         {{ i.date }}
+                        </td>
+                      </tr>
+                      {% endfor %}
+
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -290,23 +257,19 @@
     </div>
   </div>
   <!--   Core JS Files   -->
-  <!--   Core JS Files   -->
+  <script src="../assets/js/core/jquery.min.js"></script>
+  <script src="../assets/js/core/popper.min.js"></script>
+  <script src="../assets/js/core/bootstrap.min.js"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
   <!--  Google Maps Plugin    -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  <!-- Chart JS -->
   <script src="../assets/js/plugins/chartjs.min.js"></script>
   <!--  Notifications Plugin    -->
-  <script src="{% static 'js/bootstrap-notify.js'%}"></script>
+  <script src="../assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'js/now-ui-dashboard.min.js'%}" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="{% static 'js/demo.js'%}"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="../assets/js/now-ui-dashboard.min.js?v=1.5.0" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
+  <script src="../assets/demo/demo.js"></script>
 </body>
 
 </html>
