--- a/Checklist/templates/Checklist/invite.html
+++ b/Checklist/templates/Checklist/invite.html
@@ -46,15 +46,14 @@
 {% endfor %}
   </body>
 </html> -->
-{% load static %}
+<!-- {% load static %}
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'super.css' %}">
 		<link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
@@ -123,9 +122,281 @@
 		<footer class="site-footer">
 			College Collab by Kepler Developers
     </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'super.css' %}">
+  <link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>View activities</title>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>
+    Dashboard
+  </title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <!-- CSS Files -->
+  <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" />
+  <link href="{% static 'css/now-ui-dashboard.css'%}" rel="stylesheet" />
+  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <link href="{% static 'css/demo.css'%}" rel="stylesheet" />
+  <style media="screen">
+    .act-form{
+      width:auto;
+      height:auto;
+      margin-top:0px;
+    }
+    input{
+      padding:10px;
+      width:100%;
+      margin-bottom:10px;
+    }
+    .text-inp{
+        border:1px solid #62479e;
+        border-radius:5px;
+    }
+    .text-inp::placeholder{
+      color:#62479e;
+    }
+    select{
+      margin-bottom:10px;
+      width:100%;
+      border:1px solid #62479e;
+      color: #62479e;
+      background:white;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      padding: 10px;
+    }
+  </style>
+</head>
+
+<body class="">
+  <div class="wrapper ">
+  <div class="sidebar" data-color="purple">
+    <!--
+      Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
+  -->
+  <div class="logo">
+    <a class="simple-text logo-normal">
+      COLLEGE COLLAB
+    </a>
+  </div>
+  <div class="sidebar-wrapper" id="sidebar-wrapper">
+    <ul class="nav">
+      <li class="">
+        <a href="{% url 'trialHome' %}">
+          <i class="now-ui-icons design_app"></i>
+          <p>Dashboard</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'viewEssay' %}">
+          <i class="now-ui-icons education_atom"></i>
+          <p>ESSAYS</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'viewActivity' request.user %}">
+          <i class="now-ui-icons business_bulb-63"></i>
+          <p>ACTIVITIES</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'addLOR' %}">
+          <i class="now-ui-icons business_badge"></i>
+          <p>RECOMMENDERS</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'viewTesting' %}">
+          <i class="now-ui-icons business_chart-bar-32"></i>
+          <p>SCORES</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'viewTranscripts' %}">
+          <i class="now-ui-icons education_paper"></i>
+          <p>TRANSCRIPTS</p>
+        </a>
+      </li>
+      <li>
+        <a href="./collegelist.html">
+          <i class="now-ui-icons education_glasses"></i>
+          <p>COLLEGE LIST</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'profile' request.user %}">
+          <i class="now-ui-icons users_single-02"></i>
+          <p>VIEW YOUR PROFILE</p>
+        </a>
+      </li>
+      <li class="active ">
+        <a href="{% url 'invitations' %}">
+          <i class="now-ui-icons ui-1_bell-53"></i>
+          <p>VIEW INVITES</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+  </div>
+  <div class="main-panel" id="main-panel">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
+      <div class="container-fluid">
+        <div class="navbar-wrapper">
+          <div class="navbar-toggle">
+            <button type="button" class="navbar-toggler">
+              <span class="navbar-toggler-bar bar1"></span>
+              <span class="navbar-toggler-bar bar2"></span>
+              <span class="navbar-toggler-bar bar3"></span>
+            </button>
+          </div>
+          <a class="navbar-brand" href="#pablo">Invites</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-bar navbar-kebab"></span>
+          <span class="navbar-toggler-bar navbar-kebab"></span>
+          <span class="navbar-toggler-bar navbar-kebab"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navigation">
+          <form>
+            <div class="input-group no-border">
+              <input type="text" value="" class="form-control" placeholder="Search...">
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <i class="now-ui-icons ui-1_zoom-bold"></i>
+                </div>
+              </div>
+            </div>
+          </form>
+
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
+    <div class="panel-header panel-header-sm">
+    </div>
+    <div class="content">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h4 class="card-title" style="padding-left: 15px;">Invites</h4>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table">
+                  <thead class=" text-primary">
+                    <th>
+                      Name
+                    </th>
+                    <th>
+                      Email
+                    </th>
+                    <th>
+                      Status
+                    </th>
+                  </thead>
+                  <tbody>
+                    {% for i in req %}
+
+
+
+
+                    <tr>
+                      <td>
+                        {{ i.counselor_name }}
+                      </td>
+                      <td>
+                        {{ i.email }}
+                      </td>
+                      <td><a href="{% url 'acceptInvitation' i.token %}">Accept</a> or  <a href="{% url 'declineInvitation' i.token %}">Decline</a> </td>
+                      <!-- <td><a href="#">
+                        Accept or Decline
+                        </a>
+                      </td> -->
+                    </tr>
+                    {% endfor %}
+                    <!-- <tr>
+                      <td>
+                        John Doe
+                      </td>
+                      <td>
+                        johndoe@gmail.com
+                      </td>
+                      <td><a href="#">
+                        Accept / Decline
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        Johnny Appleseed
+                      </td>
+                      <td>
+                        johnnyappleseed@gmail.com
+                      </td>
+                      <td><a href="#">
+                        Accept / Decline
+                        </a>
+                      </td>
+                    </tr> -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class=" container-fluid ">
+        <div class="copyright" id="copyright">
+          &copy; <script>
+            document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+          </script>, College Collab.
+        </div>
+      </div>
+    </footer>
+  </div>
+</div>
+  <!--   Core JS Files   -->
+  <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <!--  Google Maps Plugin    -->
+  <script src="../assets/js/plugins/chartjs.min.js"></script>
+  <!--  Notifications Plugin    -->
+  <script src="{% static 'js/bootstrap-notify.js'%}"></script>
+  <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+  <script src="{% static 'js/now-ui-dashboard.min.js'%}" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
+  <script src="{% static 'js/demo.js'%}"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
 </html>
