--- a/Checklist/templates/Checklist/user.html
+++ b/Checklist/templates/Checklist/user.html
@@ -14,36 +14,26 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 -->
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'super.css' %}">
-  <link rel="stylesheet" href="{% static 'footer.css' %}">    <script src="https://use.fontawesome.com/977b0e453b.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>View activities</title>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Dashboard
+    Your Profile
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- CSS Files -->
-  <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" />
-  <link href="{% static 'css/now-ui-dashboard.css'%}" rel="stylesheet" />
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../assets/css/now-ui-dashboard.css?v=1.5.0" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="{% static 'css/demo.css'%}" rel="stylesheet" />
+  <link href="../assets/demo/demo.css" rel="stylesheet" />
 </head>
 
 <body class="user-profile">
@@ -52,69 +42,69 @@
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
     -->
-    <div class="logo">
-      <a class="simple-text logo-normal">
-        COLLEGE COLLAB
-      </a>
-    </div>
-    <div class="sidebar-wrapper" id="sidebar-wrapper">
-      <ul class="nav">
-        <li >
-          <a href="{% url 'trialHome' %}">
-            <i class="now-ui-icons design_app"></i>
-            <p>Dashboard</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'viewEssay' %}">
-            <i class="now-ui-icons education_atom"></i>
-            <p>ESSAYS</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'viewActivity' request.user %}">
-            <i class="now-ui-icons business_bulb-63"></i>
-            <p>ACTIVITIES</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'addLOR' %}">
-            <i class="now-ui-icons business_badge"></i>
-            <p>RECOMMENDERS</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'viewTesting' %}">
-            <i class="now-ui-icons business_chart-bar-32"></i>
-            <p>SCORES</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'viewTranscripts' %}">
-            <i class="now-ui-icons education_paper"></i>
-            <p>TRANSCRIPTS</p>
-          </a>
-        </li>
-        <li>
-          <a href="./collegelist.html">
-            <i class="now-ui-icons education_glasses"></i>
-            <p>COLLEGE LIST</p>
-          </a>
-        </li>
-        <li class="active">
-          <a href="{% url 'profile' request.user %}">
-            <i class="now-ui-icons users_single-02"></i>
-            <p>VIEW YOUR PROFILE</p>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'invitations' %}">
-            <i class="now-ui-icons ui-1_bell-53"></i>
-            <p>VIEW INVITES</p>
-          </a>
-        </li>
-      </ul>
-    </div>
+      <div class="logo">
+        <a class="simple-text logo-normal">
+          COLLEGE COLLAB
+        </a>
+      </div>
+      <div class="sidebar-wrapper" id="sidebar-wrapper">
+        <ul class="nav">
+          <li>
+            <a href="./dashboard.html">
+              <i class="now-ui-icons design_app"></i>
+              <p>Dashboard</p>
+            </a>
+          </li>
+          <li>
+            <a href="./essay.html">
+              <i class="now-ui-icons education_atom"></i>
+              <p>ESSAYS</p>
+            </a>
+          </li>
+          <li>
+            <a href="./activity.html">
+              <i class="now-ui-icons business_bulb-63"></i>
+              <p>ACTIVITIES</p>
+            </a>
+          </li>
+          <li>
+            <a href="./recommender.html">
+              <i class="now-ui-icons business_badge"></i>
+              <p>RECOMMENDERS</p>
+            </a>
+          </li>
+          <li>
+            <a href="./score.html">
+              <i class="now-ui-icons business_chart-bar-32"></i>
+              <p>SCORES</p>
+            </a>
+          </li>
+          <li>
+            <a href="./transcript.html">
+              <i class="now-ui-icons education_paper"></i>
+              <p>TRANSCRIPTS</p>
+            </a>
+          </li>
+          <li>
+            <a href="./collegelist.html">
+              <i class="now-ui-icons education_glasses"></i>
+              <p>COLLEGE LIST</p>
+            </a>
+          </li>
+          <li class="active ">
+            <a href="./user.html">
+              <i class="now-ui-icons users_single-02"></i>
+              <p>VIEW YOUR PROFILE</p>
+            </a>
+          </li>
+          <li>
+            <a href="./invite.html">
+              <i class="now-ui-icons ui-1_bell-53"></i>
+              <p>VIEW INVITES</p>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="main-panel" id="main-panel">
       <!-- Navbar -->
@@ -158,10 +148,10 @@
             <div class="card card-user">
               <div class="card-body">
                 <div class="author">
-                    <img class="avatar border-gray" src="{% static 'images/person.png'%}" alt="...">
-                    <h5 class="title">{{ user.studentprofile.name }}</h5>
+                    <img class="avatar border-gray" src="../assets/img/person.png" alt="...">
+                    <h5 class="title">FirstName LastName</h5>
                   <p class="description">
-                    {{ user.username }}
+                    myusername
                   </p>
                 </div>
               </div>
@@ -179,14 +169,42 @@
                       <th>
                         Email
                       </th>
+                      <th class="text-right">
+                        Phone
+                      </th>
                     </thead>
                     <tbody>
                       <tr>
                         <td>
-                          {{ user.studentprofile.counselor.name }}
+                          Mr. John Smith
                         </td>
                         <td>
-                          {{ user.studentprofile.counselor.email }}
+                          smithcounselor@gmail.com
+                        </td>
+                        <td class="text-right">
+                          (281)936-2837
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Mr. John Doe
+                        </td>
+                        <td>
+                          johndoe@gmail.com
+                        </td>
+                        <td class="text-right">
+                          (837)223-7777
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Mr. Johnny Appleseed
+                        </td>
+                        <td>
+                          appleapple@gmail.com
+                        </td>
+                        <td class="text-right">
+                          (927)337-3939
                         </td>
                       </tr>
                     </tbody>
@@ -290,23 +308,19 @@
     </div>
   </div>
   <!--   Core JS Files   -->
-  <!--   Core JS Files   -->
+  <script src="../assets/js/core/jquery.min.js"></script>
+  <script src="../assets/js/core/popper.min.js"></script>
+  <script src="../assets/js/core/bootstrap.min.js"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
   <!--  Google Maps Plugin    -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  <!-- Chart JS -->
   <script src="../assets/js/plugins/chartjs.min.js"></script>
   <!--  Notifications Plugin    -->
-  <script src="{% static 'js/bootstrap-notify.js'%}"></script>
+  <script src="../assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'js/now-ui-dashboard.min.js'%}" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="{% static 'js/demo.js'%}"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="../assets/js/now-ui-dashboard.min.js?v=1.5.0" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
+  <script src="../assets/demo/demo.js"></script>
 </body>
 
 </html>
